--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "build": "tsc",                              
     "start": "node dist/server.js"
   },
