--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",                              
+    "build": "tsc",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -18,12 +18,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.0.3",
     "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "pg": "^8.13.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^22.13.2",
     "@types/pg": "^8.11.11",
     "ts-node-dev": "^2.0.0",
